docs/api/qiskit/0.29/qiskit.opflow.list_ops.TensoredOp.mdx
---
title: TensoredOp (v0.29)
description: API reference for qiskit.opflow.list_ops.TensoredOp in qiskit v0.29
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.opflow.list_ops.TensoredOp
---

# TensoredOp

<Class id="qiskit.opflow.list_ops.TensoredOp" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/opflow/list_ops/tensored_op.py" signature="TensoredOp(oplist, coeff=1.0, abelian=False)" modifiers="class">
  Bases: `qiskit.opflow.list_ops.list_op.ListOp`

  A class for lazily representing tensor products of Operators. Often Operators cannot be efficiently tensored to one another, but may be manipulated further so that they can be later. This class holds logic to indicate that the Operators in `oplist` are meant to be tensored together, and therefore if they reach a point in which they can be, such as after conversion to QuantumCircuits, they can be reduced by tensor product.

  **Parameters**

  *   **oplist** (`List`\[`OperatorBase`]) – The Operators being tensored.
  *   **coeff** (`Union`\[`complex`, `ParameterExpression`]) – A coefficient multiplying the operator
  *   **abelian** (`bool`) – Indicates whether the Operators in `oplist` are known to mutually commute.

  ## Methods Defined Here

  <span id="qiskit-opflow-list-ops-tensoredop-eval" />

  ### eval

  <Function id="qiskit.opflow.list_ops.TensoredOp.eval" signature="TensoredOp.eval(front=None)">
    Evaluate the Operator’s underlying function, either on a binary string or another Operator. A square binary Operator can be defined as a function taking a binary function to another binary function. This method returns the value of that function for a given StateFn or binary string. For example, `op.eval('0110').eval('1110')` can be seen as querying the Operator’s matrix representation by row 6 and column 14, and will return the complex value at those “indices.” Similarly for a StateFn, `op.eval('1011')` will return the complex value at row 11 of the vector representation of the StateFn, as all StateFns are defined to be evaluated from Zero implicitly (i.e. it is as if `.eval('0000')` is already called implicitly to always “indexing” from column 0).

    ListOp’s eval recursively evaluates each Operator in `oplist`, and combines the results using the recombination function `combo_fn`.

    **Parameters**

    **front** (`Union`\[`str`, `dict`, `ndarray`, `OperatorBase`, `Statevector`, `None`]) – The bitstring, dict of bitstrings (with values being coefficients), or StateFn to evaluated by the Operator’s underlying function.

    **Return type**

    `Union`\[`OperatorBase`, `complex`]

    **Returns**

    The output of the `oplist` Operators’ evaluation function, combined with the `combo_fn`. If either self or front contain proper `ListOps` (not ListOp subclasses), the result is an n-dimensional list of complex or StateFn results, resulting from the recursive evaluation by each OperatorBase in the ListOps.

    **Raises**

    *   **NotImplementedError** – Raised if called for a subclass which is not distributive.
    *   **TypeError** – Operators with mixed hierarchies, such as a ListOp containing both PrimitiveOps and ListOps, are not supported.
    *   **NotImplementedError** – Attempting to call ListOp’s eval from a non-distributive subclass.
  </Function>

  <span id="qiskit-opflow-list-ops-tensoredop-reduce" />

  ### reduce

  <Function id="qiskit.opflow.list_ops.TensoredOp.reduce" signature="TensoredOp.reduce()">
    Try collapsing the Operator structure, usually after some type of conversion, e.g. trying to add Operators in a SummedOp or delete needless IGates in a CircuitOp. If no reduction is available, just returns self.

    **Return type**

    `OperatorBase`

    **Returns**

    The reduced `OperatorBase`.
  </Function>

  <span id="qiskit-opflow-list-ops-tensoredop-tensor" />

  ### tensor

  <Function id="qiskit.opflow.list_ops.TensoredOp.tensor" signature="TensoredOp.tensor(other)">
    Return tensor product between self and other, overloaded by `^`. Note: You must be conscious of Qiskit’s big-endian bit printing convention. Meaning, X.tensor(Y) produces an X on qubit 0 and an Y on qubit 1, or X⨂Y, but would produce a QuantumCircuit which looks like

    > -\[Y]- -\[X]-

    Because Terra prints circuits and results with qubit 0 at the end of the string or circuit.

    **Parameters**

    **other** (`OperatorBase`) – The `OperatorBase` to tensor product with self.

    **Return type**

    `OperatorBase`

    **Returns**

    An `OperatorBase` equivalent to the tensor product of self and other.
  </Function>

  <span id="qiskit-opflow-list-ops-tensoredop-to-circuit" />

  ### to\_circuit

  <Function id="qiskit.opflow.list_ops.TensoredOp.to_circuit" signature="TensoredOp.to_circuit()">
    Returns the quantum circuit, representing the tensored operator.

    **Return type**

    `QuantumCircuit`

    **Returns**

    The circuit representation of the tensored operator.

    **Raises**

    [**OpflowError**](qiskit.opflow.OpflowError "qiskit.opflow.OpflowError") – for operators where a single underlying circuit can not be produced.
  </Function>

  ## Attributes

  ### INDENTATION

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.INDENTATION" attributeValue="'  '" />

  ### abelian

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.abelian">
    Whether the Operators in `oplist` are known to commute with one another.

    **Return type**

    `bool`

    **Returns**

    A bool indicating whether the `oplist` is Abelian.
  </Attribute>

  ### coeff

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.coeff">
    The scalar coefficient multiplying the Operator.

    **Return type**

    `Union`\[`complex`, `ParameterExpression`]

    **Returns**

    The coefficient.
  </Attribute>

  ### combo\_fn

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.combo_fn">
    The function defining how to combine `oplist` (or Numbers, or NumPy arrays) to produce the Operator’s underlying function. For example, SummedOp’s combination function is to add all of the Operators in `oplist`.

    **Return type**

    `Callable`

    **Returns**

    The combination function.
  </Attribute>

  ### distributive

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.distributive">
    **Return type**

    `bool`
  </Attribute>

  ### grad\_combo\_fn

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.grad_combo_fn">
    The gradient of `combo_fn`.

    **Return type**

    `Optional`\[`Callable`]
  </Attribute>

  ### instance\_id

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.instance_id">
    Return the unique instance id.

    **Return type**

    `int`
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.num_qubits">
    **Return type**

    `int`
  </Attribute>

  ### oplist

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.oplist">
    The list of `OperatorBases` defining the underlying function of this Operator.

    **Return type**

    `List`\[`OperatorBase`]

    **Returns**

    The Operators defining the ListOp
  </Attribute>

  ### parameters

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.parameters" />

  ### settings

  <Attribute id="qiskit.opflow.list_ops.TensoredOp.settings">
    Return settings.

    **Return type**

    `Dict`
  </Attribute>
</Class>

